--- a/Gallery.css
+++ b/Gallery.css
@@ -32,3 +32,36 @@ p{
     font-style: italic;
     
 }
+
+.box{
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    border:2px solid black;
+    flex-wrap: wrap;
+    
+     transition-property: all;
+    transition-duration: 2s;
+    transform-style: ease;
+    
+}
+
+.box:hover{
+    color: white;
+    background-color: rgb(255, 255, 255);
+    transform: scale(2);
+}
+
+
+.Menu{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 20px;
+
+
+    
+
+}
