--- a/Menu.css
+++ b/Menu.css
@@ -66,3 +66,17 @@ p{
     background-color: rgb(255, 255, 255);
     transform: scale(2);
 }
+
+@media(min-width:320px) and (max-width:425px){
+   body{
+     text-align: center;
+   }
+   p{
+    text-align: center;
+   }
+
+   .Menu{
+     padding-left: 50px;
+   }
+
+}
