--- a/Sweet.css
+++ b/Sweet.css
@@ -54,3 +54,12 @@ button:hover {
         text-align: center;
     }
 }
+
+
+.material-symbols-outlined {
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 24
+}
