--- a/Menu.css
+++ b/Menu.css
@@ -17,6 +17,7 @@ p {
     font-size: var(--font-size);
     font-family: var(--font-family);
     color: black;
+    text-decoration: none;
 }
 
 .banner {
@@ -25,6 +26,7 @@ p {
     justify-content: center;
     gap: 30px;
     border: 2px solid black;
+    text-decoration: none;
     border-radius: 20px;
 
 }
@@ -131,7 +133,7 @@ p {
         justify-content: center;
         text-align: center;
         align-items: center;
-        
+
     }
 
 
