--- a/Menu.css
+++ b/Menu.css
@@ -57,11 +57,15 @@ p {
     justify-content: center;
     border: 2px solid black;
     flex-wrap: wrap;
-
     transition-property: all;
     transition-duration: 2s;
     transform-style: ease;
 
+}
+
+a {
+    text-decoration: none;
+    cursor: pointer;
 }
 
 .box:hover {
