--- a/Contact.css
+++ b/Contact.css
@@ -57,6 +57,10 @@ form {
     font-size: xx-large;
 }
 
+a {
+    text-decoration: none;
+    cursor: pointer;
+}
 
 .message {
     border: 4px solid black;
