--- a/Sweet.css
+++ b/Sweet.css
@@ -29,6 +29,10 @@ img {
     height: auto;
 }
 
+a {
+    text-decoration: none;
+    border-radius: 40px;
+}
 
 
 button {
@@ -36,6 +40,8 @@ button {
     border: 2px solid black;
     font-family: var(--font-family);
     font-size: x-large;
+    border-radius: 50px;
+    padding: 10px;
     text-decoration: none;
     border-radius: 5%;
     transition-property: all;
