--- a/CustomCake.css
+++ b/CustomCake.css
@@ -43,9 +43,23 @@ p {
 
 
 @media(min-width:320px) and (max-width:475px) {
+
     .banner {
         border: 50%;
         flex-direction: column;
+
+        p {
+            display: none;
+        }
+    }
+
+    .banner:hover {
+        p {
+            display: flex;
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+        }
     }
 
     main {
@@ -66,9 +80,23 @@ p {
 }
 
 @media(min-width:426px) and (max-width:768px) {
+
     .banner {
         border: 50%;
         flex-direction: column;
+
+        p {
+            display: none;
+        }
+    }
+
+    .banner:hover {
+        p {
+            display: flex;
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+        }
     }
 
     main {
