--- a/Menu.css
+++ b/Menu.css
@@ -90,6 +90,19 @@ a {
     .banner {
         border: 50%;
         flex-direction: column;
+
+        p {
+            display: none;
+        }
+    }
+
+    .banner:hover {
+        p {
+            display: flex;
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+        }
     }
 
     .Menu {
@@ -125,6 +138,19 @@ a {
     .banner {
         border: 50%;
         flex-direction: column;
+
+        p {
+            display: none;
+        }
+    }
+
+    .banner:hover {
+        p {
+            display: flex;
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+        }
     }
 
     .Menu {
