--- a/Contact.css
+++ b/Contact.css
@@ -112,3 +112,111 @@ a {
 .message:user-invalid {
     border-color: red;
 }
+
+
+
+@media(min-width:320px) and (max-width:475px) {
+    body {
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    .innput {
+        border: 4px solid black;
+        border-radius: 20px;
+        padding: 10px;
+        color: black;
+        height: 200px;
+        width: 250px;
+        margin-bottom: 20px;
+        font-size: 15px;
+    }
+
+    .message {
+        border: 4px solid black;
+        border-radius: 20px;
+        padding: 10px;
+        color: black;
+        flex-wrap: wrap;
+        flex-direction: row;
+        width: 290px;
+        height: 350px;
+        margin-bottom: 20px;
+        font-size: xx-large;
+    }
+
+
+    .banner {
+        border: 50%;
+        flex-direction: column;
+
+        p {
+            display: none;
+        }
+    }
+
+    .banner:hover {
+        p {
+            display: flex;
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+        }
+    }
+
+
+}
+
+
+@media(min-width:425px) and (max-width:768px) {
+    body {
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    .innput {
+        border: 4px solid black;
+        border-radius: 20px;
+        padding: 10px;
+        color: black;
+        height: 200px;
+        width: 250px;
+        margin-bottom: 20px;
+        font-size: 15px;
+    }
+
+    .message {
+        border: 4px solid black;
+        border-radius: 20px;
+        padding: 10px;
+        color: black;
+        flex-wrap: wrap;
+        flex-direction: row;
+        width: 290px;
+        height: 350px;
+        margin-bottom: 20px;
+        font-size: xx-large;
+    }
+
+
+    .banner {
+        border: 50%;
+        flex-direction: column;
+
+        p {
+            display: none;
+        }
+    }
+
+    .banner:hover {
+        p {
+            display: flex;
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+        }
+    }
+
+}
